--- a/src/EventForm/styles/EventForm.css
+++ b/src/EventForm/styles/EventForm.css
@@ -1,25 +1,21 @@
 .App {
-  font-family: Arial, sans-serif;
   padding: 20px;
+  margin: 30px auto;
+  max-width: 1200px;
+  width: 100%;
+  box-sizing: border-box;
   text-align: center;
-  background-color: #f0f2f5;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 form {
-  background-color: #ffffff;
+  background-color: #d5cccc;
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 div {
@@ -45,6 +41,7 @@ button {
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 input:focus,
@@ -81,6 +78,7 @@ button:hover {
   margin: 20px auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: left;
+  box-sizing: border-box;
 }
 
 .response h2 {
@@ -100,6 +98,11 @@ button:hover {
   font-weight: bold;
   margin-top: 0;
 }
+
+.response p:last-of-type {
+  margin-bottom: 0;
+}
+
 
 .response p:last-of-type {
   margin-bottom: 0;
